theater/src/App.css
body{
  background-color: rgb(25, 25, 25);
  color: white;
}

.welcome-message{
  position: fixed;
  z-index: 1000;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.background-cancel{
  z-index: 999;
  opacity: 1;
  background-color: rgb(0, 0, 0, 0.7);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.invest-results{
  display: flex;
  flex-direction: row;
}

.invest-results p{
  margin-right: 10px;
}

.contact-section{
  transition: 1s;
  transform: translateX(-5px);
}

.active-contact{
  opacity: 0;
}

